--- a/env.yaml
+++ b/env.yaml
@@ -58,6 +58,7 @@ dependencies:
   - pyparsing=2.4.7=py_0
   - pysocks=1.7.1=py38_0
   - pytest=5.4.2=py38_0
+  - pytest-asyncio=0.10.0=py38_1000
   - python=3.8.2=hf48f09d_13
   - python-dateutil=2.8.1=py_0
   - pytz=2020.1=py_0
